fixed icon centering issue for project pages on mobile devices

--- a/src/components/Project.scss
+++ b/src/components/Project.scss
@@ -7,10 +7,9 @@
     padding-top: 0em;
     min-height: 100% !important;
     text-align: center;
-}
-
-.ant-col-xs-24 {
-    text-align: center;
+    .ant-col-xs-24 {
+        text-align: center;
+    }
 }
 
 .project-jumbotron {
@@ -67,10 +66,11 @@
 }
 
 .techstack-wrapper{
-    padding: 0em 2em 2em 2em;
+    padding: 1em 2em 1em 2em;
     margin-left: auto;
     margin-right: auto;
     width: fit-content;
+    display: inline-block !important;
     .svg-inline--fa {
         font-size: 4em !important;
         margin: 0em 0.5em 0.1em 0.5em;
@@ -130,7 +130,7 @@
         @include themed {
             color: t($main-paragraph);
         }
-        margin: 1em auto 1em auto;
+        margin: 0em auto 1em auto;
         font-size: 1.2em;
     }
 }
@@ -188,6 +188,7 @@
         }
     }
     .techstack-wrapper {
+        padding: 0em 2em 0em 2em;
         .svg-inline--fa {
             font-size: 2.5em !important;
             margin: 0em 0.5em 0.1em 0.5em;
@@ -231,9 +232,10 @@
         margin: 1em auto 0em auto;
     }
     .techstack-wrapper {
+        padding: 0em 2em 0em 2em;
         .svg-inline--fa {
             font-size: 2.5em !important;
-            margin: 0em 0.5em 0.1em 0.5em;
+            margin: 0em 0.5em 0.5em 0.5em;
         }
     }
     .back-btn {
